yaml_parser/tests/fail/invalid-tag.snap
---
source: yaml_parser/tests/fail.rs
---
parse error at line 2, column 9
  |
2 | !invalid{}tag scalar
  |         ^
expected `...`
